<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TeamScouter</string>
    <string name="action_settings">Settings</string>
    <string name="team_name_hint">Enter team name</string>
    <string name="team_number_hint">Enter team number</string>
    <string name="team_number_label">Team Number</string>
    <string name="team_name_label">Team Name</string>
    <string name="team_details_label">Details</string>
    <string name="robot_type_label">Type of Robot:</string>
    <string name="date_picker_title">Last Date Played:</string>
    <string name="new_team">New Team</string>
    <string name="delete_team">Delete Team</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$s team</item>
        <item quantity="other">%1$s teams</item>
    </plurals>
    <plurals name="criteria_subtitle_plural">
        <item quantity="one">%1$s criterion</item>
        <item quantity="other">%1$s criteria</item>
    </plurals>
    <string name="criteria_list">List of Criteria</string>
    <string name="criteria_list_name">Criteria List</string>
    <string name="no_teams_hint">There are no teams</string>
    <string name="delete_confirmation_title">Warning!</string>
    <string name="delete_confirmation">Do you really want to delete this team?</string>
    <string name="team_contact_text">Choose Team Coach</string>
    <string name="call_coach_text">Call Team Coach</string>
    <string name="send_report_text">Send Team Summary</string>
    <string name="empty_wlt_toast">%s cannot be empty</string>

    <string name="team_report">%1$s(%2$s) played last on %3$s! %4$s, and %5$s. %6$s.</string>
    <string name="team_report_cubes">The team can throw cubes</string>
    <string name="team_report_no_cubes">The team can not throw cubes</string>
    <string name="team_summary_no_hang">cannot hang</string>
    <string name="team_summary_hang_level">can %1$s hang</string>
    <string name="team_report_no_contact">There is no specified coach</string>
    <string name="team_report_contact">The coach is %s</string>
    <string name="team_report_subject">TeamScouter Team Summary</string>
    <string name="send_report">Send team summary via</string>
    <string name="photo_zoom_title">Close Up View</string>
    <string-array name="types_of_robot">
        <item>Fire</item>
        <item>Maze</item>
        <item>Soccer</item>
        <item>Summo</item>
        <item>Offensive</item>
        <item>Defensive</item>
    </string-array>

    <string name="disquals_title">Disqualifications:</string>
    <string name="disquals_text">%1$s</string>
    <string name="win_loss_ties">%1$s - %2$s - %3$s</string>
    <string name="rank">%1$s</string>
    <string name="criteria_title">Criteria</string>
    <string name="cube_checkbox_text">Can It Throw Cubes?</string>
    <string name="hang_title">Hanging</string>
    <string name="hang_text">Hang: %1$s</string>
    <string name="wins_title">Wins:</string>
    <string name="ties_title">Ties:</string>
    <string name="losses_title">Losses:</string>
    <string name="win_tie_loss_edit_text_spacing">       </string>

    <string name="criteria_name_text">%1$s</string>
    <string name="criteria_type_text">%1$s</string>
</resources>
