<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/view_camera_and_title"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criteria_title"
        style="?android:listSeparatorTextViewStyle"/>

    <!--Wins - Ties - Losses-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <!--We should consider adding hints to the EditText instead of space-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:text="@string/wins_title"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="1234567890"
            android:textSize="14dp"
            android:text="@string/win_tie_loss_edit_text_spacing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:text="@string/ties_title"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/ties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="1234567890"
            android:textSize="14dp"
            android:text="@string/win_tie_loss_edit_text_spacing"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:text="@string/losses_title"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/losses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="1234567890"
            android:textSize="14dp"
            android:text="@string/win_tie_loss_edit_text_spacing"/>
    </LinearLayout>

    <!--Type of Robots-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/robot_type_label"
            android:textSize="17dp"
            android:paddingLeft="20dp" />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp">
        </Spinner>
    </LinearLayout>

    <!--Hang-->
    <Button
        android:id="@+id/hang_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/hang_text" />

    <!-- Can it Throw Cubes?-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cube_checkbox_text"
            android:textSize="17dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"/>

        <CheckBox
            android:id="@+id/cubes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/disqualification_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disquals_title"
            android:textSize="17dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center_vertical"
            android:paddingRight="10dp"/>

        <ImageButton
            android:id="@+id/add_disquals_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_action_add_blue"/>

        <TextView
            android:id="@+id/total_disquals_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/disquals_text"
            android:padding="10dp"/>

        <ImageButton
            android:id="@+id/subtract_disquals_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_action_remove"/>

    </LinearLayout>

    <!--Last Date Played-->
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Last Date Played"
           android:textSize="17dp"
           android:paddingLeft="20dp"
           android:paddingTop="16dp"/>
       <Button
            android:id="@+id/last_played_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
   </LinearLayout>


    <!--Choose contact-->
    <Button
        android:id="@+id/team_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/team_contact_text"/>

    <Button
        android:id="@+id/call_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/call_coach_text"/>

    <!--Send report-->
    <Button
        android:id="@+id/team_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/send_report_text"/>
    </LinearLayout>

</ScrollView>